--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "license": "BSD-2-Clause",
   "dependencies": {
-    "clay-model": "0.0.9",
-    "superagent": "~0.21.0",
-    "kew": "~0.5.0-alpha.1"
+    "jsforce": "^1.5.0",
+    "kew": "^0.5.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
-    "tape": "~2.4.0"
+    "tape": "~2.4.0",
+    "clay-model": "0.0.9"
   },
   "readmeFilename": "README.md",
   "bugs": {
